<resources>
    <string name="app_name">MyHealthyDiary</string>
    <string name="login_register">Masuk atau Daftar</string>
    <string name="different_account">atau menggunakan</string>
    <string name="forget_pass">Lupa Password ?</string>
    <string name="myhealthy_diary">MyHealthy Diary</string>
    <string name="password">Kata sandi</string>
    <string name="reset">Setel Ulang</string>
    <string name="facebook">Facebook</string>
    <string name="email_or_phone">Email atau Nomor Telepon</string>
    <string name="google">Google</string>
    <string name="show">Tampilkan</string>
    <string name="hide">Sembunyikan</string>
    <string name="welcome">Selamat Datang di MyHealthy Diary</string>
    <string name="covid">COVID-19 CARE Learn-Predict-Prevent</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="answer">Ketik jawaban disini...</string>

    <string-array name="icon_menu">
        <item>@drawable/ic_smart_chat</item>
        <item>@drawable/ic_disease</item>
        <item>@drawable/ic_note</item>
        <item>@drawable/ic_hospital</item>
        <item>@drawable/ic_records</item>
        <item>@drawable/ic_gadget</item>
    </string-array>

    <string-array name="title_menu">
        <item>Diagnosis Pintar</item>
        <item>Diseasepedia</item>
        <item>Buku Catatan</item>
        <item>Rumah Sakit</item>
        <item>My Records</item>
        <item>Sambungan Gadgets</item>
    </string-array>
</resources>