<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:padding="16dp"
    tools:context=".login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_title"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/myhealthy_diary"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/item_edit_text"
            android:hint="@string/email_or_phone"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:paddingVertical="11dp"
            android:autofillHints="" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_password"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_edit_text"
                android:hint="@string/password"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:paddingVertical="11dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tv_show_hide"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/show"
                android:background="@drawable/item_edit_text"
                android:fontFamily="@font/roboto_bold"
                android:paddingHorizontal="9dp"
                android:paddingVertical="12dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/blue_primary"
                android:textSize="14sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/ll_reset"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_marginVertical="14dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/forget_pass"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/grey_3"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/reset"
                android:layout_marginHorizontal="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/blue_primary"
                android:textSize="14sp"
                />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            app:cornerRadius="4dp"
            android:layout_marginHorizontal="16dp"
            app:backgroundTint="@color/blue_primary"
            android:paddingVertical="11dp"
            android:textAllCaps="false"
            android:text="@string/login_register"
            android:fontFamily="@font/roboto_bold"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            >
            <View
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/grey_3"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="@id/tv_different_account"
                android:layout_width="0dp"
                android:layout_height="0.5dp"/>

            <TextView
                android:id="@+id/tv_different_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/grey_3"
                android:text="@string/different_account"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular"/>

            <View
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_different_account"
                android:background="@color/grey_3"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="0.5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                app:cornerRadius="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/center_point"
                android:layout_marginStart="16dp"
                app:backgroundTint="@color/grey_2"
                android:paddingVertical="11dp"
                android:textAllCaps="false"
                android:text="@string/facebook"
                android:textColor="@color/black"
                android:layout_marginEnd="7dp"
                android:fontFamily="@font/roboto_bold"
                android:textSize="14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <View
                android:id="@+id/center_point"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="1dp"
                android:layout_height="1dp"/>

            <com.google.android.material.button.MaterialButton
                app:cornerRadius="4dp"
                app:layout_constraintStart_toEndOf="@id/center_point"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:backgroundTint="@color/grey_2"
                android:paddingVertical="11dp"
                android:textAllCaps="false"
                android:text="@string/google"
                android:textColor="@color/black"
                android:layout_marginStart="7dp"
                android:fontFamily="@font/roboto_bold"
                android:textSize="14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>